--- a/Frontend-Canvas/style.css
+++ b/Frontend-Canvas/style.css
@@ -1,3 +1,7 @@
+.game-container {
+    display: flex;
+}
+
 .board {
     display: grid;
     grid-template-columns: repeat(10, 60px);
@@ -9,7 +13,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #e0e0e0;
     border: 1px solid #ffe7e7;
     font-size: 14px;
 }
+
+.sidebar {
+    padding: 2rem;
+}
+
+/* player styles */
+
+.player-1-position-indicator {
+    background-image: linear-gradient(180deg, red, hsla(0, 0%, 100%, 0));
+}
+
+.player-2-position-indicator {
+    background-image: linear-gradient(0deg, blue, hsla(0, 0%, 100%, 0));
+}
+
+.two-player-indicator {
+    background-image: linear-gradient(180deg, red, blue;
+    }
